--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <script>
     function sendOrder(drink) {
-      fetch('https://your-project.firebaseio.com/orders.json', {
+      fetch('https://coffeeorder-44c7d-default-rtdb.asia-southeast1.firebasedatabase.app/orders.json', {
         method: 'POST',
         body: JSON.stringify({ drink: drink, time: Date.now() })
       }).then(() => alert('Your ' + drink + ' is being prepared!'));
