--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
     function sendOrder(drink) {
       fetch('https://coffeeorder-44c7d-default-rtdb.asia-southeast1.firebasedatabase.app/orders.json', {
         method: 'POST',
-        body: JSON.stringify({ drink: drink, time: Date.now() })
-      }).then(() => alert('Your ' + drink + ' is being prepared!'));
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ Order: drink, time: Date.now() })
+      })
+      .then(response => {
+        if (!response.ok) throw new Error('Network response was not ok');
+        return response.json();
+      })
+      .then(() => alert('Your ' + drink + ' is being prepared!'))
+      .catch(error => alert('Error sending order: ' + error));
     }
   </script>
 </body>
