--- a/index.html
+++ b/index.html
@@ -1,59 +1,116 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Order Coffee</title>
+  <title>BariastaGo Coffee Order</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #f3f4f6, #e0e7ff);
       text-align: center;
-      background: #f2f2f2;
-      padding: 30px;
-    }
-    h1 {
-      color: #333;
-    }
-    .drink-container {
-      display: inline-block;
-      margin: 20px;
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       padding: 20px;
-      width: 180px;
     }
-    .drink-container img {
-      width: 150px;
-      height: 150px;
-      object-fit: cover;
+
+    header {
+      background-color: #4B5563;
+      color: white;
+      padding: 20px;
+      border-bottom: 5px solid #10B981;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 36px;
+      letter-spacing: 2px;
+    }
+
+    h2 {
+      color: #1F2937;
+      margin-top: 40px;
+    }
+
+    .drink-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 40px;
+      margin: 30px 0;
+    }
+
+    .drink {
+      background: white;
+      border-radius: 12px;
+      padding: 20px;
+      width: 220px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s ease;
+    }
+
+    .drink:hover {
+      transform: translateY(-5px);
+    }
+
+    .drink img {
+      width: 100%;
       border-radius: 10px;
-      margin-bottom: 10px;
     }
-    button {
-      background-color: #6c63ff;
+
+    .drink button {
+      margin-top: 12px;
+      padding: 10px 20px;
+      background-color: #10B981;
       color: white;
       border: none;
-      border-radius: 5px;
-      padding: 12px 20px;
+      border-radius: 6px;
       font-size: 16px;
       cursor: pointer;
-      transition: background-color 0.3s;
+      transition: background-color 0.2s ease;
     }
-    button:hover {
-      background-color: #5752d1;
+
+    .drink button:hover {
+      background-color: #059669;
+    }
+
+    .footer {
+      margin-top: 60px;
+      padding-top: 20px;
+      border-top: 1px solid #d1d5db;
+    }
+
+    .footer img {
+      width: 180px;
+      margin-bottom: 10px;
+    }
+
+    .footer p {
+      color: #4B5563;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
-  <h1>Choose Your Drink</h1>
+
+  <header>
+    <h1>BariastaGo</h1>
+  </header>
+
+  <h2>Choose Your Drink</h2>
 
   <div class="drink-container">
-    <img src="https://raw.githubusercontent.com/apizaizai/coffee-order/refs/heads/main/Americano.jpg" alt="Americano">
-    <button onclick="sendOrder('Americano')">Americano</button>
+    <div class="drink">
+      <img src="https://raw.githubusercontent.com/apizaizai/coffee-order/refs/heads/main/Americano.jpg" alt="Americano">
+      <button onclick="sendOrder('Americano')">Order Americano</button>
+    </div>
+
+    <div class="drink">
+      <img src="https://raw.githubusercontent.com/apizaizai/coffee-order/refs/heads/main/Latte.jpg" alt="Latte">
+      <button onclick="sendOrder('Latte')">Order Latte</button>
+    </div>
   </div>
 
-  <div class="drink-container">
-    <img src="https://raw.githubusercontent.com/apizaizai/coffee-order/refs/heads/main/latte.jpg" alt="Latte">
-    <button onclick="sendOrder('Latte')">Latte</button>
+  <div class="footer">
+    <img src="https://raw.githubusercontent.com/apizaizai/coffee-order/refs/heads/main/Prima%20Logo.png" alt="Company Logo">
+    <p>Prima Robotics Sdn. Bhd. – Automated Coffee Experience with BariastaGo</p>
   </div>
 
   <script>
@@ -73,5 +130,6 @@
       .catch(error => alert('Error sending order: ' + error));
     }
   </script>
+
 </body>
 </html>
