--- a/index.html
+++ b/index.html
@@ -1,90 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BariastaGo Coffee Order</title>
+  <title>BariastaGo - Order Coffee</title>
   <style>
     body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #f3f4f6, #e0e7ff);
+      font-family: Arial, sans-serif;
+      background: #f0f0f0;
       text-align: center;
-      padding: 20px;
+      margin: 0;
+      padding: 0;
     }
 
     header {
-      background-color: #4B5563;
+      background-color: #6f4e37;
       color: white;
       padding: 20px;
-      border-bottom: 5px solid #10B981;
     }
 
-    header h1 {
+    h1 {
       margin: 0;
-      font-size: 36px;
-      letter-spacing: 2px;
     }
 
-    h2 {
-      color: #1F2937;
-      margin-top: 40px;
-    }
-
-    .drink-container {
+    .drink-section {
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
-      gap: 40px;
+      gap: 50px;
       margin: 30px 0;
     }
 
     .drink {
       background: white;
-      border-radius: 12px;
+      border-radius: 10px;
       padding: 20px;
-      width: 220px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      transition: transform 0.2s ease;
-    }
-
-    .drink:hover {
-      transform: translateY(-5px);
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      width: 250px;
     }
 
     .drink img {
       width: 100%;
-      border-radius: 10px;
+      border-radius: 8px;
     }
 
     .drink button {
-      margin-top: 12px;
+      margin-top: 10px;
       padding: 10px 20px;
-      background-color: #10B981;
+      background-color: #6f4e37;
       color: white;
       border: none;
-      border-radius: 6px;
+      border-radius: 5px;
       font-size: 16px;
       cursor: pointer;
-      transition: background-color 0.2s ease;
     }
 
-    .drink button:hover {
-      background-color: #059669;
+    footer {
+      margin: 40px 0;
     }
 
-    .footer {
-      margin-top: 60px;
-      padding-top: 20px;
-      border-top: 1px solid #d1d5db;
-    }
-
-    .footer img {
-      width: 180px;
-      margin-bottom: 10px;
-    }
-
-    .footer p {
-      color: #4B5563;
-      font-size: 14px;
+    .logo {
+      width: 300px; /* Increased size (was 100px) */
     }
   </style>
 </head>
@@ -92,26 +65,27 @@
 
   <header>
     <h1>BariastaGo</h1>
+    <p>Welcome! Please select your coffee below.</p>
   </header>
 
-  <h2>Choose Your Drink</h2>
-
-  <div class="drink-container">
+  <div class="drink-section">
     <div class="drink">
       <img src="https://raw.githubusercontent.com/apizaizai/coffee-order/refs/heads/main/Americano.jpg" alt="Americano">
+      <h2>Americano</h2>
       <button onclick="sendOrder('Americano')">Order Americano</button>
     </div>
 
     <div class="drink">
-      <img src="https://raw.githubusercontent.com/apizaizai/coffee-order/refs/heads/main/Latte.jpg" alt="Latte">
+      <img src="https://raw.githubusercontent.com/apizaizai/coffee-order/refs/heads/main/latte.jpg" alt="Latte">
+      <h2>Latte</h2>
       <button onclick="sendOrder('Latte')">Order Latte</button>
     </div>
   </div>
 
-  <div class="footer">
-    <img src="https://raw.githubusercontent.com/apizaizai/coffee-order/refs/heads/main/Prima%20Logo.png" alt="Company Logo">
-    <p>Prima Robotics Sdn. Bhd. – Automated Coffee Experience with BariastaGo</p>
-  </div>
+  <footer>
+    <img class="logo" src="https://raw.githubusercontent.com/apizaizai/coffee-order/refs/heads/main/Prima%20Logo.png" alt="Prima Logo">
+    <p>Powered by Prima Coffee Solutions</p>
+  </footer>
 
   <script>
     function sendOrder(drink) {
