--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     .drink-container {
       display: flex;
       justify-content: center;
-      gap: 50px;
+      gap: 60px;
       margin: 40px 0;
     }
 
@@ -43,8 +43,8 @@
       background: white;
       border: 2px solid #ccc;
       border-radius: 10px;
-      padding: 20px;
-      width: 250px;
+      padding: 15px;
+      width: 220px;
       text-align: center;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
@@ -55,9 +55,8 @@
     }
 
     .drink-card h2 {
-      margin-top: 15px;
-      margin-bottom: 10px;
-      font-size: 1.5em;
+      margin: 15px 0 10px;
+      font-size: 1.4em;
     }
 
     .drink-card button {
@@ -75,22 +74,23 @@
     }
 
     .bottom-logo {
-      margin-top: 40px;
-      margin-bottom: 20px;
+      margin-top: 60px;
+      margin-bottom: 10px;
       text-align: center;
     }
 
     .bottom-logo img {
-      width: 220px;
+      width: 280px;
     }
 
     .powered-by {
       font-style: italic;
       color: #555;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
       text-align: center;
     }
 
+    /* Portrait adjustments */
     @media (max-width: 768px) {
       .drink-container {
         flex-direction: column;
@@ -103,13 +103,15 @@
       }
 
       .bottom-logo img {
-        width: 150px;
+        width: 160px;
       }
     }
 
+    /* Landscape positioning fix */
     @media (min-width: 769px) {
       .bottom-logo {
-        margin-top: 80px;
+        margin-top: 40px;
+        margin-bottom: 10px;
       }
     }
   </style>
