--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       background-color: #f2efe9;
       margin: 0;
       padding: 0;
-      animation: fadeIn 1.2s ease-in;
+      animation: fadeIn 1s ease-in;
+      overflow-x: hidden;
     }
 
     @keyframes fadeIn {
@@ -18,52 +19,53 @@
       to { opacity: 1; }
     }
 
-    .container {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 20px;
-    }
-
     .header {
-      width: 100%;
-      padding: 30px 10px 10px;
+      text-align: center;
       background-color: #6f4e37;
       color: white;
+      padding: 20px;
     }
 
     .header h1 {
       margin: 0;
-      font-size: 2.5em;
+      font-size: 2.2em;
     }
 
     .header p {
-      margin: 10px 0 0;
-      font-size: 1.2em;
+      margin-top: 5px;
+      font-size: 1.1em;
+    }
+
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 40px;
+      padding: 30px 20px;
+      flex-wrap: nowrap;
     }
 
     .drink-card {
-      flex: 1 1 300px;
-      max-width: 400px;
-      margin: 20px;
+      width: 300px;
+      min-height: 420px;
+      background-color: white;
       border: 2px solid #ccc;
       border-radius: 10px;
-      background-color: white;
-      padding: 10px;
-      box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      text-align: center;
+      padding: 15px;
+      box-sizing: border-box;
     }
 
     .drink-card img {
-      max-width: 100%;
-      height: auto;
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
       border-radius: 10px;
     }
 
     .drink-card h2 {
-      margin: 10px 0 10px;
+      margin: 15px 0 10px;
       font-size: 1.5em;
     }
 
@@ -82,30 +84,36 @@
     }
 
     .footer {
-      width: 100%;
       text-align: center;
-      padding: 20px;
-      margin-top: 20px;
+      padding: 20px 10px 30px;
     }
 
     .footer img {
-      max-width: 150px;
+      width: 200px; /* 2x size */
+      max-width: 90%;
       height: auto;
       display: block;
       margin: 0 auto 10px;
     }
 
     .footer p {
-      color: #555;
       font-style: italic;
+      color: #444;
     }
 
     @media (max-width: 768px) {
       .container {
         flex-direction: column;
+        align-items: center;
       }
+
+      .drink-card {
+        width: 90%;
+        margin-bottom: 20px;
+      }
+
       .footer img {
-        max-width: 120px;
+        width: 140px;
       }
     }
   </style>
